--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "electron-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/KYUUUW/electron-practice/issues"
   },
-  "homepage": "https://github.com/KYUUUW/electron-practice#readme"
+  "homepage": "https://github.com/KYUUUW/electron-practice#readme",
+  "dependencies": {
+    "electron": "^10.1.2"
+  }
 }
