--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-builder --dir",
+    "build": "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,16 @@
   },
   "homepage": "https://github.com/KYUUUW/electron-practice#readme",
   "devDependencies": {
-    "electron": "^10.1.2"
+    "electron": "^10.1.2",
+    "electron-builder": "^22.8.1"
   },
   "dependencies": {
+    "electron-root-path": "^1.0.16",
     "node-fetch": "^2.6.1"
+  },
+  "build": {
+    "win": {
+      "target": "portable"
+    }
   }
 }
