--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
               "entryPoints": [
                 {
                   "html": "./src/index.html",
-                  "js": "./src/renderer.js",
+                  "js": "./src/app.tsx",
                   "name": "main_window"
                 }
               ]
@@ -69,10 +69,17 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "css-loader": "^4.2.1",
     "electron": "10.1.2",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
     "node-loader": "^1.0.1",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "electron-squirrel-startup": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
